test/files/neg/bug4537.check
c.scala:7: error: object Settings in package a cannot be accessed in package a
 println(Settings.Y)
         ^
one error found
